// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute Azure deployments for ALREADY-PREPARED applications that have existing .azure/deployment-plan.md and infrastructure files. DO NOT use this skill when the user asks to CREATE a new application — use azure-prepare instead. This skill runs azd up, azd deploy, terraform apply, and az deployment commands with built-in error recovery. Requires .azure/deployment-plan.md from azure-prepare and validated status from azure-validate. WHEN: "run azd up", "run azd deploy", "execute deployment", "push to production", "push to cloud", "go live", "ship it", "bicep deploy", "terraform apply", "publish to Azure", "launch on Azure". DO NOT USE WHEN: "create and deploy", "build and deploy", "create a new app", "set up infrastructure", "create and deploy to Azure using Terraform" — use azure-prepare for these.",
  "extractedKeywords": [
    "after",
    "already-prepared",
    "application",
    "applications",
    "apply",
    "asks",
    "assignments",
    "azure",
    "azure-prepare",
    "azure-validate",
    "bicep",
    "build",
    "built-in",
    "check",
    "cli",
    "cloud",
    "commands",
    "create",
    "deploy",
    "deployment",
    "deployment-plan",
    "deployments",
    "error",
    "execute",
    "existing",
    "files",
    "from",
    "have",
    "identity",
    "includes",
    "infrastructure",
    "instead",
    "launch",
    "live",
    "managed",
    "mcp",
    "post-deployment",
    "production",
    "provisioning",
    "publish",
    "push",
    "rbac",
    "recovery",
    "requires",
    "role",
    "roles",
    "runs",
    "ship",
    "skill",
    "sql",
    "status",
    "terraform",
    "that",
    "these",
    "this",
    "user",
    "using",
    "validated",
    "validation",
    "verification",
    "verify",
    "when",
    "with",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "after",
  "already-prepared",
  "application",
  "applications",
  "apply",
  "asks",
  "assignments",
  "azure",
  "azure-prepare",
  "azure-validate",
  "bicep",
  "build",
  "built-in",
  "check",
  "cli",
  "cloud",
  "commands",
  "create",
  "deploy",
  "deployment",
  "deployment-plan",
  "deployments",
  "error",
  "execute",
  "existing",
  "files",
  "from",
  "have",
  "identity",
  "includes",
  "infrastructure",
  "instead",
  "launch",
  "live",
  "managed",
  "mcp",
  "post-deployment",
  "production",
  "provisioning",
  "publish",
  "push",
  "rbac",
  "recovery",
  "requires",
  "role",
  "roles",
  "runs",
  "ship",
  "skill",
  "sql",
  "status",
  "terraform",
  "that",
  "these",
  "this",
  "user",
  "using",
  "validated",
  "validation",
  "verification",
  "verify",
  "when",
  "with",
]
`;
